compiler/testData/ir/interpreter/progressionFromClosedRange.kt
const val a = IntProgression.fromClosedRange(0, 10, 1).<!EVALUATED: `0`!>first<!>
const val b = LongProgression.fromClosedRange(0L, 10L, 1L).<!EVALUATED: `10`!>last<!>
const val c = CharProgression.fromClosedRange('0', '9', 1).<!EVALUATED: `1`!>step<!>
